# prepmd

./: Manifest.in  README.md  environment.yaml  pyproject.toml  requirements_complete.txt  setup.py
.github/workflows/: python-app.yml
prepmd/: __init__.py  add_modeller_license.py  check_cif.py  download.py  fix.py  get_residues.py  model.py  prep.py  prepmd.py  run.py  test_all.py  util.py
prepmd/test_data/: 101M_proc.cif
test/: test_all.py
